--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "data:seed": "node ./pages/api/seeders/usersSeeder.js"
   },
   "dependencies": {
-    "mongodb": "^6.2.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.31",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6"
   }
