--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "data:seed": "node ./pages/api/seeders/usersSeeder.js"
+    "data:seed": "ts-node --project tsconfig.seeder.json ./pages/api/seeders/usersSeeder.ts"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.5",
+    "@types/node": "^20.8.8",
+    "@types/react": "18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
-    "mongoose": "^7.6.3",
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "18.2.31",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "mongoose": "^7.6.3",
+    "next": "13.5.6",
+    "postcss": "^8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
