--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ES6",                          // Specify ECMAScript target version
-    "module": "commonjs",                     // Specify module code generation
-    "strict": true,                           // Enable all strict type-checking options
-    "esModuleInterop": true,                  // Allow default imports from modules with no default export
-    "skipLibCheck": true,                     // Skip type checking of all declaration files
-    "forceConsistentCasingInFileNames": true  // Disallow inconsistently-cased references to the same file
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./pages/*"]
+    }
   },
-  "include": [
-    "src/**/*.ts"                             // Include all TypeScript files in src folder
-  ],
-  "exclude": [
-    "node_modules"                            // Exclude the node_modules folder
-  ]
+  "include": ["next-env.d.ts", "*/.ts", "*/.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
