--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./pages/*"]
+      "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "*/.ts", "*/.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
