--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "dealclick",
+  "name": "dealclicks",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "data:seed": "ts-node --project tsconfig.seeder.json ./app/api/seeders/usersSeeder.ts"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "@types/bcrypt": "^5.0.1",
+    "@types/node": "^20.8.8",
+    "@types/react": "18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "eslint": "8.52.0",
+    "eslint-config-next": "13.5.6",
+    "mongoose": "^7.6.3",
+    "next": "13.5.6",
+    "postcss": "^8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
