--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "data:seed": "ts-node --project tsconfig.seeder.json ./app/api/seeders/usersSeeder.ts"
+    "data:seed": "ts-node --project tsconfig.seeder.json ./app/api/seeders/usersSeeder.ts",
+    "cron": "ts-node scripts/cronJob.ts"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.1",
