--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.8",
     "@types/react": "18.2.31",
     "@types/react-dom": "^18.2.14",
@@ -20,6 +21,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "postcss": "^8.4.31",
