--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.8",
     "@types/react": "18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/uuid": "^9.0.6",
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
     "next": "13.5.6",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   }
 }
