--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.5.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "mongoose-plugin-autoinc": "^1.1.9",
     "multer": "^1.4.5-lts.1",
     "next": "13.5.6",
     "postcss": "^8.4.31",
