--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.6"
   }
 }
