--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/app/*": ["./app/*"],
+      "@/app/backend": ["./app/backend/*"],
       "*": ["./*.d.ts"]
     }
   },
