--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.2.14",
     "@types/uuid": "^9.0.6",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "sharp": "^0.32.6",
+    "swr": "^2.0.0",
     "tailwindcss": "^3.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
